// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Allow load custom resources > md2html with metadata > filelist 1`] = `
"[
  "_bundle/search-async-1",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/app-css-3",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/page-constructor-extension.css",
  "_bundle/page-constructor-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-css-0",
  "_bundle/search-js-1",
  "_bundle/search-css-3",
  "_bundle/search-css-1",
  "_bundle/search-js-2",
  "_bundle/search-css-2",
  "index.html",
  "page.html",
  "project/config.html",
  "toc.js"
]"
`;

exports[`Allow load custom resources > md2html with metadata 1`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Documentation | Documentation</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="test-yfm" content="inline test">
        <meta name="yfm-config" content="config test">
        <meta name="title" content="Documentation">
        <meta name="noIndex" content="true">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":true,"data":{"title":"Documentation","description":"","links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"},{"name":"test-yfm","content":"inline test"},{"name":"yfm-config","content":"config test"}],"title":"Documentation","noIndex":true},"title":"Documentation"},"router":{"pathname":"index","depth":1,"base":"./"},"lang":"ru","langs":["ru"]}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html with metadata 2`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Documentation</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="test-yfm" content="inline test">
        <meta name="yfm-config" content="config test">
        <meta name="yfm" value="builder in page">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Lorem&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"},{"name":"test-yfm","content":"inline test"},{"name":"yfm-config","content":"config test"},{"name":"yfm","value":"builder in page"}]},"headings":[],"title":""},"router":{"pathname":"page","depth":1,"base":"./"},"lang":"ru","langs":["ru"]}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html with metadata 3`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Documentation</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="test-yfm" content="inline test">
        <meta name="yfm-config" content="config test">
        <meta name="yfm" value="builder in config">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Lorem&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"},{"name":"test-yfm","content":"inline test"},{"name":"yfm-config","content":"config test"},{"name":"yfm","value":"builder in config"}]},"headings":[],"title":""},"router":{"pathname":"project/config","depth":2,"base":"../"},"lang":"ru","langs":["ru"]}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html with metadata 4`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"UUID"},{"name":"Config","href":"project/config.html","id":"UUID"}],"path":"toc.yaml","id":"UUID"};"`;

exports[`Allow load custom resources > md2md with metadata > filelist 1`] = `
"[
  "index.yaml",
  "page.md",
  "project/config.md",
  "toc.yaml"
]"
`;

exports[`Allow load custom resources > md2md with metadata 1`] = `
"title: Documentation
description: ''
meta:
  metadata:
    - name: generator
      content: Diplodoc Platform vDIPLODOC-VERSION
    - name: test-yfm
      content: inline test
    - name: yfm-config
      content: config test
  title: Documentation
  noIndex: true
links:
  - title: Getting started with Documentation
    description: This guide will show you the basics of working with Documentation
    href: page.md
"
`;

exports[`Allow load custom resources > md2md with metadata 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
  - name: test-yfm
    content: inline test
  - name: yfm-config
    content: config test
  - name: yfm
    content: builder in page
---

Lorem"
`;

exports[`Allow load custom resources > md2md with metadata 3`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
  - name: test-yfm
    content: inline test
  - name: yfm-config
    content: config test
  - name: yfm
    value: builder in config
---

Lorem"
`;

exports[`Allow load custom resources > md2md with metadata 4`] = `
"title: Documentation
href: index.yaml
items:
  - name: Documentation
    href: page.md
  - name: Config
    href: project/config.md
path: toc.yaml
"
`;
